--- a/WeatherApp/app/src/main/res/values/strings.xml
+++ b/WeatherApp/app/src/main/res/values/strings.xml
@@ -1,3 +1,38 @@
 <resources>
-    <string name="app_name">WeatherApp</string>
+    <string name="app_name">Weather App</string>
+    <string name="find_the_sun">Find the Sun?</string>
+    <string name="sunny_icon">sunny icon</string>
+    <string name="favorites">Favorites</string>
+    <string name="settings">Settings</string>
+    <string name="mph">mph</string>
+    <string name="ms">m/s</string>
+    <string name="this_week">This Week</string>
+    <string name="favorite_cities">Favorite Cities</string>
+    <string name="try_again">Try Again</string>
+    <string name="delete">Delete</string>
+    <string name="cancel">Cancel</string>
+    <string name="confirm_deletion">Confirm Deletion</string>
+    <string name="confirm_remove_favorite_city">Are you sure you want to remove %s from favorites?</string>
+    <string name="city_removed_from_favorites">City removed from favorites.</string>
+    <string name="error_removing_city_from_favorites">Error removing city from favorites.</string>
+    <string name="change_units">Change Units of Measurement</string>
+    <string name="save">Save</string>
+    <string name="fahrenheit_f">Fahrenheit °F</string>
+    <string name="celsius_c">Celsius °C</string>
+    <string name="close">Close</string>
+    <string name="imperial_fahrenheit_f">Imperial: Fahrenheit °F</string>
+    <string name="metric_celsius_c">Metric: Celsius °C</string>
+    <string name="chose_unit">Choose a unit</string>
+    <string name="imperial">imperial</string>
+    <string name="metric">metric</string>
+    <string name="measurement_unit_saved_successfully">Measurement unit saved successfully.</string>
+    <string name="error_saving_measurement_unit">Error saving measurement unit.</string>
+    <string name="select_a_measurement_unit">Select a measurement unit, please.</string>
+    <string name="city">City</string>
+    <string name="search">Search</string>
+    <string name="please_enter_city_name">Please enter a city name</string>
+    <string name="unknown_error_getting_city">Unknown error getting weather settings.</string>
+    <string name="city_added_to_favorites">City added to favorites.</string>
+    <string name="error_adding_city_to_favorites">Error adding city to favorites.</string>
+    <string name="error_unexpected_error_occurred">An unexpected error occurred. Please try again later.</string>
 </resources>
